--- a/06_dom/04_DOM_edit.html
+++ b/06_dom/04_DOM_edit.html
@@ -30,12 +30,26 @@
             ul.appendChild(li)
         }
         addOptiLanguage('Ruby on rails')
+        addOptiLanguage('golang')
 
 
         // Edit
         const secondLang = document.querySelector('li:nth-child(2)')
-        // secondLang.innerText='Mojo'
-        
+        // secondLang.innerText='Mojo'    //Not optimized approach
+        const newli = document.createElement('li')
+        newli.textContent = 'mojo'
+        secondLang.replaceWith(newli)
+
+
+        //Edit 2
+        const firstLang = document.querySelector('li:first-child')
+        firstLang.outerHTML = '<li>Typescript</li>'
+
+
+        //remove
+        const lastLang = document.querySelector('li:last-child')
+        lastLang.remove()
+         
 
     </script>
 </body>
