--- a/10_Classes_and_oop/bind.html
+++ b/10_Classes_and_oop/bind.html
@@ -23,7 +23,7 @@
         handleClick(){
             console.log('button clicked');
             console.log(this);
-            // here this refers to the button element that was clicked
+            // here 'this' refers to the button element that was clicked
             // in order to access the class instance, we need to bind the context of this to the handleClick method
             //bind is a method that creates a new function that, when called, has its this keyword set to the provided value
         }
